<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
			xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>io.github.mtrevisan</groupId>
	<artifactId>boxon</artifactId>
	<version>1.1.0-SNAPSHOT</version>

	<packaging>jar</packaging>

	<name>Boxon</name>
	<description>Library for declarative parsing of a message</description>
	<url>https://github.com/mtrevisan/Boxon</url>

	<developers>
		<developer>
			<name>Mauro Trevisan</name>
			<email>851903+mtrevisan@users.noreply.github.com</email>
			<url>https://github.com/mtrevisan/</url>
			<roles>
				<role>Java Developer</role>
			</roles>
		</developer>
	</developers>

	<scm>
		<url>https://github.com/mtrevisan/Boxon</url>
		<connection>scm:git:git@github.com:mtrevisan/Boxon.git</connection>
		<developerConnection>scm:git:git@github.com:mtrevisan/Boxon.git</developerConnection>
	</scm>

	<issueManagement>
		<url>https://github.com/mtrevisan/boxon/issues</url>
		<system>GitHub Issues</system>
	</issueManagement>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<java.version>1.11</java.version>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>

		<!-- Profiles & Build -->
		<maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
		<maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
		<sonatype.nexus-staging-maven-plugin.version>1.6.8</sonatype.nexus-staging-maven-plugin.version>
		<maven-source-plugin.version>3.2.1</maven-source-plugin.version>
		<maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
		<maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
		<maven-help-plugin.version>3.2.0</maven-help-plugin.version>
		<maven-shade-plugin.version>3.2.4</maven-shade-plugin.version>

		<!-- Spring Expression -->
		<springframework.spring-expression.version>5.2.8.RELEASE</springframework.spring-expression.version>

		<!-- ClassGraph -->
		<github.classgraph.version>4.8.88</github.classgraph.version>

		<!-- Logging -->
		<slf4j.slf4j-api.version>1.7.30</slf4j.slf4j-api.version>
		<slf4j.slf4j-log4j12.version>1.7.30</slf4j.slf4j-log4j12.version>

		<!-- JUnit -->
		<junit.junit-jupiter-engine.version>5.6.2</junit.junit-jupiter-engine.version>
		<!-- Apache -->
		<apache.commons-lang3.version>3.11</apache.commons-lang3.version>
	</properties>

	<profiles>
		<profile>
			<id>stage</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<plugins>
					<!-- Deploy -->
					<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-deploy-plugin -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-deploy-plugin</artifactId>
						<version>${maven-deploy-plugin.version}</version>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<!-- mvn clean deploy -U -Dmaven.test.skip=true-->
			<id>release</id>
			<properties>
				<gpg.executable>gpg</gpg.executable>
			</properties>
			<build>
				<plugins>
					<!-- Signing JAR Files -->
					<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-gpg-plugin -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>${maven-gpg-plugin.version}</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<!-- Nexus Staging Plugin -->
					<!-- https://mvnrepository.com/artifact/org.sonatype.plugins/nexus-staging-maven-plugin -->
					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<version>${sonatype.nexus-staging-maven-plugin.version}</version>
						<extensions>true</extensions>
						<executions>
							<execution>
								<id>default-deploy</id>
								<phase>deploy</phase>
								<goals>
									<goal>deploy</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<!-- The Base URL of Nexus instance where we want to stage -->
							<serverId>sonatype-nexus-staging</serverId>
							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
							<autoReleaseAfterClose>true</autoReleaseAfterClose>
						</configuration>
					</plugin>
					<!-- Source -->
					<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-source-plugin -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>${maven-source-plugin.version}</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<!-- JavaDoc -->
					<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-javadoc-plugin -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>${maven-javadoc-plugin.version}</version>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<additionalOptions>-html5</additionalOptions>
							<javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
							<detectJavaApiLink>false</detectJavaApiLink>
						</configuration>
					</plugin>
				</plugins>
			</build>

			<distributionManagement>
				<snapshotRepository>
					<id>sonatype-nexus-snapshots</id>
					<name>Sonatype Nexus Snapshots</name>
					<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
					<uniqueVersion>true</uniqueVersion>
				</snapshotRepository>
				<repository>
					<id>sonatype-nexus-staging</id>
					<name>Nexus Release Repository</name>
					<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
					<uniqueVersion>false</uniqueVersion>
				</repository>
			</distributionManagement>
		</profile>
	</profiles>

	<build>
		<plugins>
			<!-- Surefire -->
			<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<configuration>
					<argLine>--add-opens boxon/io.github.mtrevisan.boxon.codecs.queclink=spring.core,spring.expression,ALL-UNNAMED --add-opens boxon/io.github.mtrevisan.boxon.annotations=spring.core,spring.expression,ALL-UNNAMED --add-opens boxon/io.github.mtrevisan.boxon.annotations.checksummers=spring.core,spring.expression,ALL-UNNAMED --add-opens boxon/io.github.mtrevisan.boxon.annotations.converters=spring.core,spring.expression,ALL-UNNAMED --add-opens boxon/io.github.mtrevisan.boxon.annotations.validators=spring.core,spring.expression,ALL-UNNAMED --add-opens boxon/io.github.mtrevisan.boxon.codecs=spring.core,spring.expression,ALL-UNNAMED --add-opens boxon/io.github.mtrevisan.boxon.external=ALL-UNNAMED --add-opens boxon/io.github.mtrevisan.boxon.internal.matchers=ALL-UNNAMED</argLine>
				</configuration>
			</plugin>
			<!-- Compiler -->
			<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<showDeprecation>true</showDeprecation>
					<source>11</source>
					<target>11</target>
				</configuration>
			</plugin>
			<!-- display active profile in compile phase -->
			<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-help-plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-help-plugin</artifactId>
				<version>${maven-help-plugin.version}</version>
				<executions>
					<execution>
						<id>show-profiles</id>
						<phase>compile</phase>
						<goals>
							<goal>active-profiles</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- Templating -->
			<!-- https://mvnrepository.com/artifact/org.codehaus.mojo/templating-maven-plugin -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>templating-maven-plugin</artifactId>
				<version>1.0.0</version>
				<executions>
					<execution>
						<id>generate-version-class</id>
						<goals>
							<goal>filter-sources</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- Shade -->
			<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-shade-plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>${maven-shade-plugin.version}</version>
				<executions>
					<execution>
						<!-- Run shade goal on package phase -->
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<minimizeJar>true</minimizeJar>
							<shadedArtifactAttached>true</shadedArtifactAttached>
							<shadedClassifierName>shaded</shadedClassifierName>
							<filters>
								<!-- FIXME: strengthen the inclusions -->
								<!-- ClassNotFoundException: ch.qos.logback.classic.boolex.OnMarkerEvaluator-->
								<filter>
									<artifact>ch.qos.logback:logback-classic</artifact>
									<includes>
										<include>**</include>
									</includes>
								</filter>
							</filters>
							<transformers>
								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<manifestEntries>
										<X-Compile-Source-JDK>${maven.compiler.source}</X-Compile-Source-JDK>
										<X-Compile-Target-JDK>${maven.compiler.target}</X-Compile-Target-JDK>
										<Built-By>Mauro Trevisan</Built-By>
										<Build-Jdk>${java.version} (${java.vendor} ${java.vm.version})</Build-Jdk>
										<Build-OS>${os.name} ${os.arch} ${os.version}</Build-OS>
									</manifestEntries>
								</transformer>
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<!-- SpEL -->
		<!-- https://mvnrepository.com/artifact/org.springframework/spring-expression -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-expression</artifactId>
			<version>${springframework.spring-expression.version}</version>
		</dependency>

		<!-- ClassGraph -->
		<!-- https://mvnrepository.com/artifact/io.github.classgraph/classgraph -->
		<dependency>
			<groupId>io.github.classgraph</groupId>
			<artifactId>classgraph</artifactId>
			<version>${github.classgraph.version}</version>
		</dependency>

		<!-- Logger -->
		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.slf4j-api.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>${slf4j.slf4j-log4j12.version}</version>
			<scope>test</scope>
		</dependency>

		<!-- JUnit -->
		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.junit-jupiter-engine.version}</version>
			<scope>test</scope>
		</dependency>
		<!-- Apache -->
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>${apache.commons-lang3.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<licenses>
		<license>
			<name>MIT License</name>
			<url>https://opensource.org/licenses/MIT</url>
		</license>
	</licenses>
</project>
